--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GMod Menu Style</title>
+    <title>GMod Menu Style - Blue Edition</title>
     <style>
-        /* Стиль в духе Garry's Mod */
+        /* Стиль в духе Garry's Mod, голубая цветовая схема */
         body {
             margin: 0;
             padding: 0;
@@ -28,8 +28,8 @@
         .gmod-header {
             text-align: center;
             padding: 30px 20px 10px;
-            border-bottom: 2px solid #ffaa00;
-            box-shadow: 0 0 20px rgba(255,170,0,0.3);
+            border-bottom: 2px solid #33ccff;
+            box-shadow: 0 0 20px rgba(51, 204, 255, 0.3);
             background: rgba(0,0,0,0.7);
             margin-bottom: 20px;
         }
@@ -37,8 +37,8 @@
         .gmod-header h1 {
             font-size: 4em;
             margin: 0;
-            color: #ffaa00;
-            text-shadow: 0 0 10px #ffaa00, 0 0 20px #ff8800;
+            color: #33ccff;
+            text-shadow: 0 0 10px #33ccff, 0 0 20px #1e90ff;
             letter-spacing: 4px;
             font-weight: bold;
             text-transform: uppercase;
@@ -61,19 +61,19 @@
             max-width: 90%;
             margin: 20px auto;
             padding: 30px 20px;
-            box-shadow: 0 0 30px rgba(0,0,0,0.7), 0 0 15px #ffaa00 inset;
+            box-shadow: 0 0 30px rgba(0,0,0,0.7), 0 0 15px #33ccff inset;
             backdrop-filter: blur(2px);
         }
 
         /* Заголовок внутри меню */
         .menu-container h2 {
             text-align: center;
-            color: #ffaa00;
+            color: #33ccff;
             font-size: 2em;
             margin-top: 0;
             margin-bottom: 30px;
             text-transform: uppercase;
-            border-bottom: 1px dashed #ffaa00;
+            border-bottom: 1px dashed #33ccff;
             padding-bottom: 10px;
         }
 
@@ -85,7 +85,7 @@
             margin: 15px 0;
             background: #2a2a2a;
             border: 2px solid #555;
-            color: #ffaa00;
+            color: #33ccff;
             font-size: 1.5em;
             font-weight: bold;
             text-transform: uppercase;
@@ -98,16 +98,16 @@
         }
 
         .menu-button:hover {
-            background: #ffaa00;
-            border-color: #ffcc66;
+            background: #33ccff;
+            border-color: #88e0ff;
             color: #111;
-            box-shadow: 0 0 20px #ffaa00, 0 5px 0 #b37400;
+            box-shadow: 0 0 20px #33ccff, 0 5px 0 #1e90ff;
             transform: translateY(-2px);
         }
 
         .menu-button:active {
             transform: translateY(3px);
-            box-shadow: 0 0 15px #ffaa00, 0 2px 0 #b37400;
+            box-shadow: 0 0 15px #33ccff, 0 2px 0 #1e90ff;
         }
 
         /* Текстовая информация (дата) в стиле GMod */
@@ -121,13 +121,13 @@
         }
 
         #date {
-            color: #ffaa00;
+            color: #33ccff;
             font-weight: bold;
         }
 
         #message {
             text-align: center;
-            color: #ffaa00;
+            color: #33ccff;
             font-size: 1.2em;
             min-height: 1.5em;
             margin: 15px 0 5px;
@@ -138,7 +138,7 @@
             text-align: center;
             padding: 15px;
             background: rgba(0,0,0,0.8);
-            border-top: 2px solid #ffaa00;
+            border-top: 2px solid #33ccff;
             color: #888;
             font-size: 0.9em;
             margin-top: auto;
@@ -170,7 +170,7 @@
         <button class="menu-button" id="btnOptions">⚙️ Options</button>
         <button class="menu-button" id="btnExit">⏻ Exit</button>
 
-        <!-- Информационный блок с датой (как в прошлой версии) -->
+        <!-- Информационный блок с датой -->
         <div class="info-text">
             Today is <span id="date"></span>
         </div>
@@ -187,7 +187,7 @@
         const options = { year: 'numeric', month: 'long', day: 'numeric' };
         document.getElementById('date').textContent = today.toLocaleDateString('ru-RU', options);
 
-        // Обработчики для кнопок (просто выводят сообщение)
+        // Обработчики для кнопок
         function showMessage(text) {
             document.getElementById('message').textContent = '🔔 ' + text;
         }
