--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TTT - Trouble in Terrorist Town</title>
     <style>
-        /* Базовые стили (те же, что и раньше) */
+        /* Базовые стили */
         body {
             margin: 0;
             padding: 0;
@@ -90,9 +90,9 @@
             box-shadow: 0 6px 0 #8b0000, 0 0 30px #ff0000;
         }
 
-        /* Модальные окна (мини-окошки) */
+        /* Модальные окна */
         .modal {
-            display: none; /* скрыты по умолчанию */
+            display: none;
             width: 400px;
             max-width: 90%;
             background: rgba(20, 20, 20, 0.95);
@@ -141,7 +141,7 @@
             transform: scale(1.2);
         }
 
-        /* Кнопки внутри окна ролей */
+        /* Кнопки ролей с индивидуальными цветами */
         .role-button {
             display: block;
             width: 100%;
@@ -149,7 +149,6 @@
             margin: 10px 0;
             background: #2a2a2a;
             border: 2px solid #555;
-            color: #cc0000;
             font-size: 1.5em;
             font-weight: bold;
             text-transform: uppercase;
@@ -160,9 +159,19 @@
             text-align: left;
         }
 
+        .role-detective {
+            color: #0066ff;
+        }
+        .role-traitor {
+            color: #cc0000;
+        }
+        .role-innocent {
+            color: #00cc00;
+        }
+
         .role-button:hover {
             background: #cc0000;
-            color: #111;
+            color: #111 !important; /* при наведении текст становится чёрным */
             border-color: #ff6666;
             transform: translateY(-2px);
             box-shadow: 0 6px 0 #8b0000;
@@ -173,7 +182,7 @@
             box-shadow: 0 2px 0 #8b0000;
         }
 
-        /* Текст управления - обновлённый список */
+        /* Текст управления */
         .controls-list p {
             color: #ddd;
             font-size: 1.1em;
@@ -192,7 +201,7 @@
             margin-right: 8px;
         }
 
-        /* Информационный блок с датой и описанием */
+        /* Информационный блок */
         .info-text {
             text-align: center;
             color: #aaa;
@@ -234,7 +243,7 @@
             margin-top: auto;
         }
 
-        /* Адаптация для мобильных */
+        /* Адаптация */
         @media (max-width: 600px) {
             .ttt-header h1 {
                 font-size: 2.2em;
@@ -262,18 +271,18 @@
         <button class="main-button" id="showControls">УПРАВЛЕНИЕ</button>
     </div>
 
-    <!-- Мини-окошко для ролей -->
+    <!-- Мини-окошко для ролей (кнопки с классами цветов) -->
     <div id="rolesModal" class="modal">
         <div class="modal-header">
             <h3>Выберите роль</h3>
             <button class="close-btn" id="closeRoles">&times;</button>
         </div>
-        <button class="role-button" id="roleDetective">🕵️ Детектив</button>
-        <button class="role-button" id="roleTraitor">🗡️ Предатель</button>
-        <button class="role-button" id="roleInnocent">👤 Невиновный</button>
+        <button class="role-button role-detective" id="roleDetective">🕵️ Детектив</button>
+        <button class="role-button role-traitor" id="roleTraitor">🗡️ Предатель</button>
+        <button class="role-button role-innocent" id="roleInnocent">👤 Невиновный</button>
     </div>
 
-    <!-- Мини-окошко для управления (ОБНОВЛЕНО) -->
+    <!-- Мини-окошко для управления -->
     <div id="controlsModal" class="modal">
         <div class="modal-header">
             <h3>Управление</h3>
@@ -345,9 +354,8 @@
             if (e.target === controlsModal) controlsModal.classList.remove('active');
         });
 
-        // ---- Эффект печатающегося текста ----
+        // ---- Эффект печатающегося текста (с поддержкой HTML в начале) ----
         let typingTimer = null;
-        let currentText = '';
 
         function stopTyping() {
             if (typingTimer) {
@@ -356,13 +364,16 @@
             }
         }
 
-        function typeText(text, element, speed = 30) {
+        // Функция печати: сначала устанавливаем заголовок (цветной), затем печатаем остальное
+        function typeDescription(roleClass, roleName, restText, speed = 25) {
             stopTyping();
-            element.textContent = '';
+            // Очищаем сообщение и вставляем цветной заголовок
+            messageDiv.innerHTML = `<span class="${roleClass}">${roleName}</span>: `;
             let i = 0;
             typingTimer = setInterval(() => {
-                if (i < text.length) {
-                    element.textContent += text.charAt(i);
+                if (i < restText.length) {
+                    // Добавляем по одному символу к существующему HTML
+                    messageDiv.innerHTML += restText.charAt(i);
                     i++;
                 } else {
                     clearInterval(typingTimer);
@@ -371,26 +382,26 @@
             }, speed);
         }
 
-        // ---- Описания ролей ----
+        // ---- Описания ролей (без названия в начале) ----
         const descriptions = {
-            detective: '🕵️ Детектив: может покупать снаряжение в магазине, исследовать тела, использовать радар. Цель — найти и обезвредить предателей. Детектив имеет доступ к уникальному оружию и может вызывать подозрение у невиновных.',
-            traitor: '🗡️ Предатель: имеет доступ к специальному оружию и снаряжению. Может ставить ловушки, отравлять еду, использовать телепортер. Цель — убить всех невиновных и детектива, оставаясь незамеченным.',
-            innocent: '👤 Невиновный: обычный член команды. Нет особых способностей, кроме обыска тел и покупки оружия в магазине у детектива. Цель — выжить, сотрудничать с детективом и помочь найти предателей.'
+            detective: ' может покупать снаряжение в магазине, исследовать тела, использовать радар. Цель — найти и обезвредить предателей. Детектив имеет доступ к уникальному оружию и может вызывать подозрение у невиновных.',
+            traitor: ' имеет доступ к специальному оружию и снаряжению. Может ставить ловушки, отравлять еду, использовать телепортер. Цель — убить всех невиновных и детектива, оставаясь незамеченным.',
+            innocent: ' обычный член команды. Нет особых способностей, кроме обыска тел и покупки оружия в магазине у детектива. Цель — выжить, сотрудничать с детективом и помочь найти предателей.'
         };
 
         // Обработчики для кнопок ролей
         document.getElementById('roleDetective').addEventListener('click', () => {
-            typeText(descriptions.detective, messageDiv, 25);
+            typeDescription('role-detective', 'Детектив', descriptions.detective, 25);
             rolesModal.classList.remove('active');
         });
 
         document.getElementById('roleTraitor').addEventListener('click', () => {
-            typeText(descriptions.traitor, messageDiv, 25);
+            typeDescription('role-traitor', 'Предатель', descriptions.traitor, 25);
             rolesModal.classList.remove('active');
         });
 
         document.getElementById('roleInnocent').addEventListener('click', () => {
-            typeText(descriptions.innocent, messageDiv, 25);
+            typeDescription('role-innocent', 'Невиновный', descriptions.innocent, 25);
             rolesModal.classList.remove('active');
         });
     </script>
